some typo revised.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>mindes 邁得思股份有限公司</title>
+<title>minds 邁得思股份有限公司</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit="no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,8 +25,8 @@
 <meta name="theme-color" content="#ffffff">
 <!-- favicons end -->
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/custom-responsive-style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css?1">
+<link rel="stylesheet" type="text/css" href="css/custom-responsive-style.css?1">
 <!-- <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script> -->
 
 <!-- bootstrap -->
@@ -35,7 +35,7 @@
 <body>
 	<header>
 		<div class="mobile-logo">
-			<a href=""><img src="images/mindes-logo.png"></a>
+			<a href=""><img src="images/minds-logo.png"></a>
 		</div>
 		<a class="menu-toggle rounded" href="#">
 			<i class="fa fa-bars"></i>
@@ -59,7 +59,7 @@
 	</header>
 	<section id="Banner">
 		<div class="logo">
-			<img src="images/mindes-logo.png">
+			<img src="images/minds-logo.png">
 		</div>
 		<div class="blacksection">
 			<h1>Always find the<br>minds</h1>
