--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<ul>
 					<li>聯絡人：賴文復</li>
 					<li>手機號碼：0922220267</li>
-					<li>聯絡地址：220071 新北市板橋區民族路151巷35號</li>
+					<li>聯絡地址：231016 新北市新店區中正路637號12樓</li>
 					<li>電子信箱：peterlai@minds.com.tw</li>
 				</ul>
 			</div>
