--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 			<div class="content-wrap">
 				<ul>
 					<li>聯絡人：賴文復</li>
-					<li>手機號碼：0922220267</li>
-					<li>聯絡地址：231016 新北市新店區中正路637號12樓</li>
+					<li>電話：(02)29518848 / 0922220267</li>
+					<li>地址：231016 新北市新店區中正路637號12樓</li>
 					<li>電子信箱：peterlai@minds.com.tw</li>
 				</ul>
 			</div>
